🐛 fix(high contrast): high contrast styles improvement for components.

--- a/packages/assets/css/src/scss/_components/_accordion/_accordion-elements/_build-item.scss
+++ b/packages/assets/css/src/scss/_components/_accordion/_accordion-elements/_build-item.scss
@@ -70,7 +70,7 @@
 				@include modifier(body, footer) {
 					> .sui-box {
 						border: none;
-						border-radius: 0;
+						border-radius: $border-radius-md;
 						.sui-box-group {
 							margin: 0;
 
