--- a/packages/assets/css/src/scss/_components/_checkbox/_modifiers/_checkbox-nested.scss
+++ b/packages/assets/css/src/scss/_components/_checkbox/_modifiers/_checkbox-nested.scss
@@ -11,11 +11,25 @@
 	// THEME: None.
 	@include sui-class($rtl: false, $theme: null) {
 		@include block($block) {
-
 			@include element(group) {
 				@include modifier(nested) {
 					.sui-checkbox__group-body {
-						margin-left: 28px;
+						margin-left: $checkbox-spacing-lg;
+					}
+				}
+			}
+		}
+	}
+
+	// DIR: Right o left.
+	// THEME: None.
+	@include sui-class($rtl: true, $theme: null) {
+		@include block($block) {
+			@include element(group) {
+				@include modifier(nested) {
+					.sui-checkbox__group-body {
+						margin-right: $checkbox-spacing-lg;
+						margin-left: 0;
 					}
 				}
 			}
