--- a/packages/assets/css/src/scss/_components/_tag/_elements/_tag-dismiss.scss
+++ b/packages/assets/css/src/scss/_components/_tag/_elements/_tag-dismiss.scss
@@ -24,4 +24,28 @@
 			}
 		}
 	}
+
+	// DIR: Right to left.
+	// THEME: None.
+	@include sui-class($rtl: true, $theme: null) {
+		// Block wrapper.
+		@include block($block) {
+			@include element(cta) {
+				padding: 0 $spacing-sm 0 0;
+			}
+		}
+	}
+
+	// DIR: Left to right.
+	// THEME: Dark.
+	@include sui-class($rtl: false, $theme: dark) {
+		// Block wrapper.
+		@include block($block) {
+			@include element(cta) {
+				.sui-icon {
+					color: inherit;
+				}
+			}
+		}
+	}
 }
